// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainMenu /> <MainMenu /> with developerMode = false renders correctly 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="homeMenuItem"
    onClick={[Function]}
    selected={true}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <SaveIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Saved Spaces"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="spacesNearbyMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <SearchIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Spaces Nearby"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="spacesNearbyMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <SearchIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Spaces Nearby"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="visitMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <LanguageIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Visit a Space"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="visitMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <LanguageIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Visit a Space"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="loadMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <PublishIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Load"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="settingsMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <SettingsIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Settings"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="dashboardMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <ShowChartIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`<MainMenu /> <MainMenu /> with developerMode = true renders correctly 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="homeMenuItem"
    onClick={[Function]}
    selected={true}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <SaveIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Saved Spaces"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="spacesNearbyMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <SearchIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Spaces Nearby"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="spacesNearbyMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <SearchIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Spaces Nearby"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <Offline
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(Tooltip))
      placement="right"
      title="You need an internet connection."
    >
      <div>
        <WithStyles(ForwardRef(MenuItem))
          button={true}
          disabled={true}
          id="visitMenuItem"
          onClick={[Function]}
          selected={false}
        >
          <WithStyles(ForwardRef(ListItemIcon))>
            <LanguageIcon />
          </WithStyles(ForwardRef(ListItemIcon))>
          <WithStyles(ForwardRef(ListItemText))
            primary="Visit a Space"
          />
        </WithStyles(ForwardRef(MenuItem))>
      </div>
    </WithStyles(ForwardRef(Tooltip))>
  </Offline>
  <Online
    polling={true}
    wrapperType="span"
  >
    <WithStyles(ForwardRef(MenuItem))
      button={true}
      id="visitMenuItem"
      onClick={[Function]}
      selected={false}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <LanguageIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Visit a Space"
      />
    </WithStyles(ForwardRef(MenuItem))>
  </Online>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="loadMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <PublishIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Load"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="settingsMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <SettingsIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Settings"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    id="dashboardMenuItem"
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <ShowChartIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Dashboard"
    />
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    button={true}
    onClick={[Function]}
    selected={false}
  >
    <WithStyles(ForwardRef(ListItemIcon))>
      <CodeIcon />
    </WithStyles(ForwardRef(ListItemIcon))>
    <WithStyles(ForwardRef(ListItemText))
      primary="Developer"
    />
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(List))>
`;
